fix: Fix navbar height
Fix the navbar height to 100px to avoid layout shift when the mobile menu is toggled

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,7 @@
 .navbar__container {
   display: flex;
   justify-content: space-between;
+  height: 100px;
   align-items: center;
   padding: 2.5rem 0;
 }
